<resources>
    <string name="app_name">WiFi Tuner</string>

    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>

    <string name="scan_conf">Setup Scan</string>
    <string name="scan_start">Start Scan</string>
    <string name="scan_push">Push Scans</string>
    <string name="scan_view">View Scans</string>

    <string name="fname">first name</string>
    <string name="lname">last name</string>
    <string name="email">email address</string>
    <string name="pswd">password</string>

    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="room">Room</string>
    <string name="time">Time</string>

    <string name="test_wifi">Test WiFi</string>
    <string name="test_api">Test API</string>
    <string name="test_db">Test Database</string>
    <string name="colon">:</string>

    <!--
    <string name="prompt_login">already have an account login</string>
    <string name="prompt_signup">don't have an account signup</string>
    -->
</resources>
