<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.nydev.wifituner.ScanConfActivity"
    android:background="@color/darkgrey">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_start"
        android:id="@+id/scan_start"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:background="@color/red"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="start_scan" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center">

        <TextView
            android:text="@string/building"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scan_conf_tv1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/scan_conf_building"
            android:spinnerMode="dialog"
            android:visibility="invisible" />

        <TextView
            android:text="@string/floor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scan_conf_tv2"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/scan_conf_floor"
            android:spinnerMode="dialog"
            android:visibility="invisible" />

        <TextView
            android:text="@string/room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scan_conf_tv3"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/scan_conf_room"
            android:spinnerMode="dialog"
            android:visibility="invisible" />

        <TextView
            android:text="@string/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scan_conf_tv4"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/purple">

            <NumberPicker
                android:id="@+id/scan_conf_hour"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:scaleX="2"
                android:scaleY="2" />

            <TextView
                android:text="@string/colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scan_conf_tv5"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center" />

            <NumberPicker
                android:id="@+id/scan_conf_minute"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:scaleX="2"
                android:scaleY="2" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
