<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.nydev.wifituner.HomeActivity"
    android:background="@color/darkgrey">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/home_logout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:background="@color/red"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="home_logout" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_api"
        android:id="@+id/home_test_api"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/blue"
        android:background="@color/orange"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="home_test_api" />

    <Space
        android:id="@+id/home_space1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/home_test_api" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_wifi"
        android:id="@+id/home_test_wifi"
        android:textColor="@color/blue"
        android:background="@color/orange"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="home_test_wifi"
        android:layout_below="@+id/home_space1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Space
        android:id="@+id/home_space2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/home_test_wifi" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_db"
        android:id="@+id/home_test_db"
        android:textColor="@color/blue"
        android:background="@color/orange"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="home_test_db"
        android:layout_below="@+id/home_space2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
