<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.nydev.wifituner.LoginActivity"
    android:background="@color/darkgrey">

    <Button
        android:text="Home Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_home"
        android:textColor="@color/white"
        android:background="@color/red"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="login_home"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:textColor="@color/white"
        android:background="@color/red"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="login_default"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_email"
        android:hint="@string/email"
        android:maxLines="1"
        android:textColorLink="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/blue"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/login_email"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_pswd"
        android:hint="@string/pswd"
        android:maxLines="1"
        android:textColorLink="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/blue"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

</RelativeLayout>
